--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,98 @@
+/* -------------------------------nav start here-------------------------------------- */
 .nav-bg-color {
   background-color: #210221;
+}
+
+.nav-text-color {
+  color: #958695;
+}
+
+/* -------------------------------catagory start here-------------------------------------- */
+
+.catagory-boxbg-color {
+  background-color: #332b20;
+}
+
+.rounded-10 {
+  border-radius: 20px;
+}
+.custom-h {
+  height: 100px;
+}
+
+/* -------------------------------booking start here-------------------------------------- */
+.bookingnow-bg-color {
+  background-color: #210221;
+}
+
+.calander-bg-color {
+  background-color: #ebf5ed;
+}
+
+.bookingnow-imgbg-color {
+  opacity: 50%;
+  background-color: #422842;
+}
+
+.calanderbtn-color {
+  background-color: #b6acb6;
+}
+
+.rotated-element {
+  cursor: pointer;
+  transform: rotate(90deg);
+  color: #968e97;
+}
+.arraw-color {
+  cursor: pointer;
+  color: #968e97;
+}
+/* -------------------------------product start here-------------------------------------- */
+.product-bg-color {
+  background-color: #210221;
+}
+
+.custom-h-p {
+  height: 300px;
+}
+
+.product-des-color- {
+  color: #988a98;
+}
+
+.btn-bg-color {
+  background-color: #210221;
+}
+
+/* -------------------------------service start here-------------------------------------- */
+.service-headerbox-bg-color {
+  background-color: #210221;
+}
+
+.service-box-imagesize {
+  z-index: 10;
+  position: absolute;
+  background-color: wheat;
+  padding: 10px;
+  height: 120px;
+  width: 100px;
+}
+
+.service-box-headingsize {
+  position: absolute;
+  z-index: 1000;
+  padding: 20px;
+  margin: 10px;
+}
+
+/* -------------------------------footer start here-------------------------------------- */
+
+.footer-bg-color {
+  background-color: #210221;
+}
+
+.footer-text-color {
+  color: #bbb2bb;
 }
 
 .margin-value {
@@ -12,4 +105,125 @@
     margin-left: -80px;
     margin-top: -80px;
   }
+}
+
+/* -------------------------------footer start here-------------------------------------- */
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Poppins", sans-serif;
+}
+
+body {
+  display: flex;
+  background: #ef62da;
+  min-height: 100vh;
+  padding: 0 10px;
+  align-items: center;
+  justify-content: center;
+}
+
+.calendar-container {
+  background: #fff;
+  width: 450px;
+  border-radius: 10px;
+  box-shadow: 0 15px 40px rgba(0, 0, 0, 0.12);
+}
+
+.calendar-container header {
+  display: flex;
+  align-items: center;
+  padding: 25px 30px 10px;
+  justify-content: space-between;
+}
+
+header .calendar-navigation {
+  display: flex;
+}
+
+header .calendar-navigation span {
+  height: 38px;
+  width: 38px;
+  margin: 0 1px;
+  cursor: pointer;
+  text-align: center;
+  line-height: 38px;
+  border-radius: 50%;
+  user-select: none;
+  color: #aeabab;
+  font-size: 1.9rem;
+}
+
+.calendar-navigation span:last-child {
+  margin-right: -10px;
+}
+
+header .calendar-navigation span:hover {
+  background: #f2f2f2;
+}
+
+header .calendar-current-date {
+  font-weight: 500;
+  font-size: 1.45rem;
+}
+
+.calendar-body {
+  padding: 20px;
+}
+
+.calendar-body ul {
+  list-style: none;
+  flex-wrap: wrap;
+  display: flex;
+  text-align: center;
+}
+
+.calendar-body .calendar-dates {
+  margin-bottom: 20px;
+}
+
+.calendar-body li {
+  width: calc(100% / 7);
+  font-size: 1.07rem;
+  color: #414141;
+}
+
+.calendar-body .calendar-weekdays li {
+  cursor: default;
+  font-weight: 500;
+}
+
+.calendar-body .calendar-dates li {
+  margin-top: 30px;
+  position: relative;
+  z-index: 1;
+  cursor: pointer;
+}
+
+.calendar-dates li.inactive {
+  color: #aaa;
+}
+
+.calendar-dates li.active {
+  color: #fff;
+}
+
+.calendar-dates li::before {
+  position: absolute;
+  content: "";
+  z-index: -1;
+  top: 50%;
+  left: 50%;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.calendar-dates li.active::before {
+  background: #6332c5;
+}
+
+.calendar-dates li:not(.active):hover::before {
+  background: #e4e1e1;
 }
